--- a/Primrose.API/primrose-server.csproj
+++ b/Primrose.API/primrose-server.csproj
@@ -10,8 +10,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="supabase" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
