--- a/Primrose.API/primrose-server.csproj
+++ b/Primrose.API/primrose-server.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="supabase" Version="1.1.1" />
   </ItemGroup>
 
